controls/C-0055/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "kubescape-c-0055-linux-hardening"
  labels:
    controlId: "C-0055"
  annotations:
    controlUrl: "https://kubescape.io/docs/controls/c-0055/"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  validations:
    - expression: >
        object.kind != 'Pod' ||
        (has(object.metadata.annotations) && object.metadata.annotations.exists(annotation, annotation.startsWith("container.apparmor.security.beta.kubernetes.io"))) ||
        (has(object.spec.securityContext) && (has(object.spec.securityContext.seccompProfile) || has(object.spec.securityContext.seLinuxOptions))) ||
        object.spec.containers.all(container, has(container.securityContext) && (has(container.securityContext.seccompProfile) ||
        has(container.securityContext.seLinuxOptions) ||
        (has(container.securityContext.capabilities) && has(container.securityContext.capabilities.drop))))
      message: "Pods could have more security hardening! (see more at https://kubescape.io/docs/controls/c-0055/)"
    - expression: >
        ['Deployment','ReplicaSet','DaemonSet','StatefulSet','Job'].all(kind, object.kind != kind) ||
        (has(object.spec.template.metadata) && has(object.spec.template.metadata.annotations) && object.spec.template.metadata.annotations.exists(annotation, annotation.startsWith("container.apparmor.security.beta.kubernetes.io"))) ||
        (has(object.spec.template.spec.securityContext) && (has(object.spec.template.spec.securityContext.seccompProfile) || has(object.spec.template.spec.securityContext.seLinuxOptions))) ||
        object.spec.template.spec.containers.all(container, has(container.securityContext) && (has(container.securityContext.seccompProfile) ||
        has(container.securityContext.seLinuxOptions) ||
        (has(container.securityContext.capabilities) && has(container.securityContext.capabilities.drop))))
      message: "Workloads could have more security hardening! (see more at https://kubescape.io/docs/controls/c-0055/)"
    - expression: >
        object.kind != 'CronJob' ||
        (has(object.spec.jobTemplate.metadata) && has(object.spec.jobTemplate.metadata.annotations) && object.spec.jobTemplate.metadata.annotations.exists(annotation, annotation.startsWith("container.apparmor.security.beta.kubernetes.io"))) ||
        (has(object.spec.jobTemplate.spec.template.spec.securityContext) && (has(object.spec.jobTemplate.spec.template.spec.securityContext.seccompProfile) || has(object.spec.jobTemplate.spec.template.spec.securityContext.seLinuxOptions))) ||
        object.spec.jobTemplate.spec.template.spec.containers.all(container, has(container.securityContext) && (has(container.securityContext.seccompProfile) ||
        has(container.securityContext.seLinuxOptions) ||
        (has(container.securityContext.capabilities) && has(container.securityContext.capabilities.drop))))
      message: "CronJob could have more security hardening! (see more at https://kubescape.io/docs/controls/c-0055/)"
